--- a/css/styles.css
+++ b/css/styles.css
@@ -1,54 +1,49 @@
 body {
+  background-color: #2b2e4a;
   margin: 0;
   text-align: center;
   font-family: "Crimson Text", serif;
-  color: #232020;
+  color: #f9f7f7;
   font-size: 1rem;
 }
 h1 {
   margin: 50px auto 0 auto;
   font-family: "Caveat", fantasy;
-  color: #3282b8;
+  color: #f9f7f7;
   font-size: 5.625rem;
 }
 h2 {
   font-family: "Spartan", sans-serif;
-  color: #0f4c75;
+  color: #e84545;
   font-size: 2.5rem;
 }
 h3 {
   margin: 0 auto;
   font-family: "Spartan", sans-serif;
-  color: #0f4c75;
+  color: #ea5455;
   font-size: 1.5rem;
   font-weight: normal;
 }
 hr {
   border-style: none;
-  border-top: 5px dotted grey;
+  border-top: 5px dotted #dbe2ef;
   width: 5%;
 }
 .top-container {
-  background-color: #bbe1fa;
+  background-image: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-color: #ffa372;
   position: relative;
-  padding-top: 100px;
-  line-height: 2;
-}
-.top-cloud {
-  position: absolute;
-  right: 150px;
-  top: 50px;
-}
-.bottom-cloud {
-  position: absolute;
-  left: 150px;
-  bottom: 300px;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  line-height: 1.5;
 }
 .pro {
   text-decoration: underline;
 }
 .middle-container {
-  margin: 100px auto;
+  margin: 0 auto;
 }
 .profile {
   margin: 100px auto;
@@ -88,45 +83,34 @@ hr {
   line-height: 2;
 }
 .btn {
-	box-shadow:inset 0 1px 0 0 #bee2f9;
-	background:linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
-	background-color:#63b8ee;
-	border-radius:6px;
-	border:1px solid #3866a3;
+	box-shadow:inset 0 1px 0 0 #cf866c;
+	background:linear-gradient(to bottom, #d0451b 5%, #bc3315 100%);
+	background-color:#d0451b;
+	border-radius:3px;
+	border:1px solid #942911;
 	display:inline-block;
 	cursor:pointer;
-	color:#14396a;
-	font-family: "Spartan", sans-serif;
-	font-size:16px;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0 1px 0 #7cacde;
+	text-shadow:0 1px 0 #854629;
 }
 .btn:hover {
-	background:linear-gradient(to bottom, #468ccf 5%, #63b8ee 100%);
-	background-color:#468ccf;
+	background:linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
+	background-color:#bc3315;
 }
 .btn:active {
 	position:relative;
 	top:1px;
-}
-.bottom-container {
+}.bottom-container {
   margin-bottom: 0;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background-color: #0f4c75;
-}
-.footer-link {
-  color: #3282b8;
-  margin: 10px 25px;
-  text-decoration: none;
-  font-size: 1.25rem;
-}
-.footer-link:hover {
-  color: #bbe1fa;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #53354a;
 }
 .copyright {
-  color: #bbe1fa;
-  font-size: 0.75rem;
+  color: #eeeeee;
   margin: 25px auto;
 }
